feat: add to build daemon writtern in rust for getting T and RH from HTU21D sensor
NOTE: also required "meta-rust-bin" layer to provide  one of latest version of rust https://github.com/rust-embedded/meta-rust-bin

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,5 +9,5 @@ BBFILE_COLLECTIONS += "meta-meteo"
 BBFILE_PATTERN_meta-meteo = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-meteo = "6"
 
-LAYERDEPENDS_meta-meteo = "core meta-sunxi"
+LAYERDEPENDS_meta-meteo = "core meta-sunxi rust-bin-layer"
 LAYERSERIES_COMPAT_meta-meteo = "kirkstone"
