--- a/recipes-rust/slint-gui/files/Cargo.toml
+++ b/recipes-rust/slint-gui/files/Cargo.toml
@@ -7,10 +7,9 @@ build = "build.rs"
 
 [dependencies]
 slint = "1.3.2"
-#linux-embedded-hal = "0.2.2"
-#rumqttc = "0.23.0"
-#json = "0.12.4"
-#envconfig = "0.10.0"
+rumqttc = "0.23.0"
+json = "0.12.4"
+envconfig = "0.10.0"
 
 [build-dependencies]
 slint-build = "1.3.2"
