feat: Minor improves
- CO2 sensor send period = 120 sec
- fixed issue with config for htu21d-daemon
- turn off screensaver and DPMS

--- a/recipes-python/python3-co2-sensor-daemon/files/config.ini
+++ b/recipes-python/python3-co2-sensor-daemon/files/config.ini
@@ -30,7 +30,7 @@ autocalibration = false
 #enabled = true
 
 # The period between two measurements in seconds (Default: 300)
-#period = 300
+period = 120
 
 [MQTT]
 
