--- a/recipes-rust/slint-gui/files/Cargo.toml
+++ b/recipes-rust/slint-gui/files/Cargo.toml
@@ -10,6 +10,7 @@ slint = "1.3.2"
 rumqttc = "0.23.0"
 json = "0.12.4"
 envconfig = "0.10.0"
+chrono = "0.4"
 
 [build-dependencies]
 slint-build = "1.3.2"
