--- a/recipes-rust/slint-gui/files/Cargo.toml
+++ b/recipes-rust/slint-gui/files/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 build = "build.rs"
 
 [dependencies]
-slint = "1.3.2"
+slint = { version = "1.3.2", default-features = false, features = ["std", "compat-1-2", @BACKEND_TYPE@, @RENDER_TYPE@] }
 rumqttc = "0.23.0"
 json = "0.12.4"
 envconfig = "0.10.0"
