--- a/recipes-rust/weather-provider/files/Cargo.toml
+++ b/recipes-rust/weather-provider/files/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] 
 chrono = "0.4"
 rumqttc = "0.23.0"
 envconfig = "0.10.0"
+nom = "7.1.3"
