Add disto with support USB WiFi/BT RTL8821CU
+ configure wifi if enabled feature rtl8821cu
For this feature you need connect layer https://github.com/EmbeddedAndroid/meta-rtlwifi

+ add ntp-waiter recipe for waiting for NTP synchronization

--- a/conf/distro/cubieboard-meteo.conf
+++ b/conf/distro/cubieboard-meteo.conf
@@ -14,4 +14,4 @@ MACHINE = "cubieboard"
 
 IMAGE_FSTYPES = "sunxi-sdimg"
 
-DISTRO_FEATURES:remove = " bluetooth 3g nfc wayland"
+DISTRO_FEATURES:remove = " 3g nfc"
