Clean code. Version 1.0

--- a/conf/distro/cubieboard-meteo-rtl8821cu.conf
+++ b/conf/distro/cubieboard-meteo-rtl8821cu.conf
@@ -5,4 +5,4 @@ require cubieboard-meteo.conf
 DISTRO = "cubieboard-meteo-rtl8821cu"
 DISTRO_NAME = "Cubieboard meteo (Yocto Project based Distro) with RTL8821CU WIFI/BT driver"
 
-DISTRO_FEATURES:append = " rtl8821cu wifi bluetooth"
+DISTRO_FEATURES:append = " rtl8821cu bluetooth"
