Enable autocalibration for CO2 sensor by default

--- a/recipes-python/co2-sensor-daemon/files/config.ini
+++ b/recipes-python/co2-sensor-daemon/files/config.ini
@@ -22,7 +22,7 @@ reporting_method = homeassistant-mqtt
 serialdev = /dev/ttyS4
 
 # ON/OFF autocalibration (Default: not touch)
-autocalibration = false
+autocalibration = true
 
 [Daemon]
 
